[tool.poetry]
name = "hexlet-code"
version = "1.0"
description = "A project for practicing brain games in Python"
authors = ["Dmitriy Boyko <Dmitriyboyko19@gmail.com>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Topic :: Games/Entertainment",
  "Topic :: Education",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Development Status :: 3 - Alpha",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
